// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nav bar should match snapshot (authenticated) 1`] = `
<NavBar
  local={
    Object {
      "list": Array [
        Array [
          "all",
          "All Polls",
          true,
          "/list?filter=all",
        ],
        Array [
          "created",
          "My Polls",
          true,
          "/list?filter=created",
        ],
        Array [
          "voted",
          "Voted",
          true,
          "/list?filter=voted",
        ],
        Array [
          "hidden",
          "Hidden",
          true,
          "/list?filter=hidden",
        ],
        Array [
          "form",
          "New Poll",
          true,
          "/form",
          "u-flex-right",
        ],
      ],
    }
  }
/>
`;

exports[`nav bar should match snapshot (default) 1`] = `
<NavBar
  local={
    Object {
      "list": Array [
        Array [
          "all",
          "All Polls",
          true,
          "/list?filter=all",
        ],
        Array [
          "created",
          "My Polls",
          false,
          "/list?filter=created",
        ],
        Array [
          "voted",
          "Voted",
          true,
          "/list?filter=voted",
        ],
        Array [
          "hidden",
          "Hidden",
          true,
          "/list?filter=hidden",
        ],
        Array [
          "form",
          "New Poll",
          false,
          "/form",
          "u-flex-right",
        ],
      ],
    }
  }
/>
`;
